syntax = "proto3";

package kvpb;

service Kv {

    rpc Get (GetRequest) returns (GetResponse) {
    }
    rpc Put (PutRequest) returns (PutResponse) {
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
    rpc FindNext (FindNextRequest) returns (FindNextResponse) {
    }
}


message GetRequest {
    bytes key = 2;
}
message GetResponse {
    string error = 1;
    bytes value = 2;
    bool empty = 3;
}

message PutRequest {
    bytes key = 1;
    bytes value = 2;
}

message PutResponse {
    string error = 1;
}

message DeleteRequest {
    bytes key = 1;
}
message DeleteResponse {
    string error = 1;
}

message FindNextRequest {
    bytes key = 1;
    bool next = 2;
}

message FindNextResponse {
    string error = 1;
    bytes key = 2;
    bytes value = 3;
    bool empty = 4;
}
